<resources>
    <string name="app_name">Demo My Second App</string>
    <string name="hello">Welcome to Android!</string>
    <string name="button">Button</string>
    <string name="txt">Large Text</string>
    <string name="button_2">Button 2</string>
    <string name="name">Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>

</resources>